final version with all new dependencies